alerts: Fix vertical alignment of "x" button.
This commit fixes the vertical alignment of "x" button in the
alert to be more closer to the center. We can still improve it
by probably using something like flexbox layout instead of
hard coding paddings or margins.

--- a/web/styles/alerts.css
+++ b/web/styles/alerts.css
@@ -194,7 +194,7 @@ $alert-error-red: hsl(0deg 80% 40%);
         .exit {
             float: right;
             margin: -10px -50px -10px 0;
-            padding: 10px;
+            padding: 13px 10px;
 
             font-size: 2.5em;
             font-weight: 300;
